<resources>
    <string name="app_name">Administration West</string>
    <string name="nome">Nome</string>
    <string name="mobile">Telemóvel</string>
    <string name="data">Data de nascimento</string>
    <string name="email">Email</string>
    <string name="passsword">Password</string>
    <string name="passsword_2">Repetir a password</string>
    <string name="login">Login</string>

    <string name="login_2">Fazer Login</string>
    <string name="registo">Ainda não tem conta? Crie</string>
    <string name="registo_titulo">Registo</string>
    <string name="telemovel">Telemóvel</string>

    <string name="descricao">Descrição</string>

    <string name="compra_finalizada">Finalizar compra</string>
    <string name="compra">Compras</string>

    <string name="finalizar_compra">Finalizar Compra!</string>


    <string name="registo_2">Criar conta</string>
    <string name="registo_3">Já tem conta? Faça login</string>

    <string name="perfil">Perfil</string>
    <string name="contacts">Contactos</string>
    <string name="logout">Logout</string>

    <string name="continuar_comprar">Continuar a Comprar</string>
    <string name="finalizar_comprar">Finalizar a Compra</string>


    <string name="mudar_password">Mudar a password</string>
    <string name="company">Empresas</string>
    <string name="profile">Perfil</string>

    <string name="produtos">Produtos</string>
    <string name="produto">Produtos</string>

    <string name="nome_produto">Nome do Produto</string>
    <string name="search">Search</string>


    <string name="title_notifications">Carrinho</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="moradas">Moradas</string>
    <string name="morada_faturacao">Morada de Faturação</string>
    <string name="morada_entrega">Morada de Entrega</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="editar_morada">Editar morada</string>
    <string name="editar_morada_entrega">Editar morada entrega</string>
    <string name="editar_morada_faturacao">Editar morada faturação</string>

    <string name="menu_principal">Voltar ao Menu Principal</string>
    <string name="total">Total</string>
    <string name="quant">Quant</string>
    <string name="quantidade">Quantidade:</string>
    <string name="voltar">Voltar</string>

    <string name="nif">NIF</string>
    <string name="cidade">Cidade</string>
    <string name="morada">Morada</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="enviar_morada">Enviar Morada</string>
    <string name="m_todos_de_pagamento">Métodos de Pagamento</string>
    <string name="assunto">Assunto</string>
    <string name="mensagem">Mensagem</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="antiga_password">Password atual</string>
    <string name="nova_password">Nova password</string>
    <string name="historico">Histórico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>