<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/perfil"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/textViewNomeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/nome"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textViewEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewNifProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/nif"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/textViewDataProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/data"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/buttonMudarPasswordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:text="@string/mudar_password"
        android:textColor="@color/secondblue"
        android:backgroundTint="@color/white"
        />

</LinearLayout>