<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pages.MoradasActivity">



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/moradas" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/morada_faturacao" />

        <RadioButton
            android:id="@+id/radioButtonMoradaFaturacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Morada de Faturação" />



        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/morada_entrega" />

        <RadioButton
            android:id="@+id/radioButtonMoradaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Morada de Entrega" />


        <Button
            android:id="@+id/buttonEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_morada" />

        <Button
            android:id="@+id/buttonProsseguirMoradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/prosseguir" />
</LinearLayout>
