<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true" android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textViewBillingAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/morada_entrega"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">

            <!--nome-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eTNameBillingAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NameBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <!--nif-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eTNifBillingAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nif"
                android:inputType="number"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NifBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nif"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!--telemovel-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eTMobileBillingAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telemovel"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MobileBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telemovel"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--cidade-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCidadeBillingAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CidadeBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!--morada-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eTmoradaBillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/morada"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/moradaBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/morada"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <!--codigo Postal -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etcodigoBillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/codigo_postal"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codigoBillingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_postal"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/buttonEnviarBillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/enviar_morada"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"/>


            <Button
                android:id="@+id/buttonVoltarBillingAddress"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/voltar"
                android:textColor="@color/secondblue" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>












